@@ -1,5 +1,10 @@
 2004-06-23  Sam Steingold  <sds@gnu.org>
 
+	* time.d (convert_time_from_universal): new function
+	* genclisph.d (main): export it
+
+2004-06-23  Sam Steingold  <sds@gnu.org>
+
 	* genclisph.d (main): undef PACKAGE_* to avoid some warnings
 	* modules/rawsock/rawsock.c: include "config.h" after "clisp.h"
 	to avoid some warnings
